[Fix] invisible new flag in test user contact page

--- a/app/javascript/stylesheets/bem/flash.scss
+++ b/app/javascript/stylesheets/bem/flash.scss
@@ -19,8 +19,8 @@
     @extend %flash;
     // background-color: palegreen;
     // color: #275327;
-    background-color: #dff0d8;
-    color: #3c763d;
+    background-color: #c0f8a9;
+    color: #2f5a2f;
   }
   &__danger {
     @extend %flash;
